correct header overlapping

--- a/src/style.css
+++ b/src/style.css
@@ -1631,7 +1631,7 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 850px) {
     :root {
         --container-padding: 1rem;
     }
